--- a/src/Plugin.CurrentActivity.Android/Plugin.CurrentActivity.Android.csproj
+++ b/src/Plugin.CurrentActivity.Android/Plugin.CurrentActivity.Android.csproj
@@ -14,7 +14,7 @@
     <PackageLicenseUrl>https://github.com/jamesmontemagno/MonoDroidToolkit/blob/master/LICENSE.md</PackageLicenseUrl>
     <Owners>JamesMontemagno</Owners>
     <PackageProjectUrl>https://github.com/jamesmontemagno/MonoDroidToolkit</PackageProjectUrl>
-
+    <PackageIconUrl>http://refractored.com/images/plugin_current_activity.png</PackageIconUrl>
     <Summary>Easily gain access to the active Activity.</Summary>
     <PackageTags>xamarin, pcl, xam.pcl, plugin, plugin for xamarin, android, activity, current activity</PackageTags>
     <Title>Current Activity Plugin for Xamarin.Android</Title>
