--- a/src/Plugin.CurrentActivity.Android/Plugin.CurrentActivity.Android.csproj
+++ b/src/Plugin.CurrentActivity.Android/Plugin.CurrentActivity.Android.csproj
@@ -42,7 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="**\*.cs;**\*.xml;**\*.axml;**\*.png" Exclude="obj\**\*.*;bin\**\*.*;obj;bin;" />
-    <None Include="..\..\nuget\readme.txt" Pack="true" />
+    <None Include="..\..\nuget\readme.txt" PackagePath="readme.txt" Pack="true" />
     <PackageReference Include="MSBuild.Sdk.Extras" Version="1.2.0" PrivateAssets="All" />
     <Compile Include="CurrentActivity\**\*.cs" />
   </ItemGroup>
