--- a/src/Plugin.CurrentActivity.Android/Plugin.CurrentActivity.Android.csproj
+++ b/src/Plugin.CurrentActivity.Android/Plugin.CurrentActivity.Android.csproj
@@ -11,9 +11,9 @@
     <Authors>James Montemagno</Authors>
     <PackageId>Plugin.CurrentActivity</PackageId>
     <PackOnBuild>true</PackOnBuild>
-    <PackageLicenseUrl>https://github.com/jamesmontemagno/MonoDroidToolkit/blob/master/LICENSE.md</PackageLicenseUrl>
+    <PackageLicenseUrl>https://github.com/jamesmontemagno/CurrentActivityPlugin/blob/master/LICENSE</PackageLicenseUrl>
     <Owners>JamesMontemagno</Owners>
-    <PackageProjectUrl>https://github.com/jamesmontemagno/MonoDroidToolkit</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/jamesmontemagno/CurrentActivityPlugin</PackageProjectUrl>
     <PackageIconUrl>http://refractored.com/images/plugin_current_activity.png</PackageIconUrl>
     <Summary>Easily gain access to the active Activity.</Summary>
     <PackageTags>xamarin, pcl, xam.pcl, plugin, plugin for xamarin, android, activity, current activity</PackageTags>
