--- a/src/Plugin.CurrentActivity.Android/Plugin.CurrentActivity.Android.csproj
+++ b/src/Plugin.CurrentActivity.Android/Plugin.CurrentActivity.Android.csproj
@@ -1,50 +1,53 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="MSBuild.Sdk.Extras/2.0.31">
+	<PropertyGroup>
+		<TargetFrameworks>MonoAndroid81;MonoAndroid90</TargetFrameworks>
+		<AssemblyName>Plugin.CurrentActivity</AssemblyName>
+		<RootNamespace>Plugin.CurrentActivity</RootNamespace>
+		<Product>$(AssemblyName) ($(TargetFramework))</Product>
+		<AssemblyVersion>1.0.0.0</AssemblyVersion>
+		<AssemblyFileVersion>1.0.0.0</AssemblyFileVersion>
+		<Version>1.0.0.0</Version>
+		<Authors>James Montemagno</Authors>
+		<PackageId>Plugin.CurrentActivity</PackageId>
+		<PackOnBuild>true</PackOnBuild>
+		<PackageLicenseUrl>https://github.com/jamesmontemagno/CurrentActivityPlugin/blob/master/LICENSE</PackageLicenseUrl>
+		<Owners>JamesMontemagno</Owners>
+		<PackageProjectUrl>https://github.com/jamesmontemagno/CurrentActivityPlugin</PackageProjectUrl>
+		<PackageIconUrl>http://refractored.com/images/plugin_current_activity.png</PackageIconUrl>
+		<Summary>Easily gain access to the active Activity.</Summary>
+		<PackageTags>xamarin, pcl, xam.pcl, plugin, plugin for xamarin, android, activity, current activity</PackageTags>
+		<Title>Current Activity Plugin for Xamarin.Android</Title>
+		<AndroidResgenClass></AndroidResgenClass>
+		<Description>
+			Provides a simple solution for getting access to the current Activity of the application when developing a Plugin for Xamarin.
+			This will lay down a base "application" class for developers in their Android application with boilerplate code to get them started.
+		</Description>
+		<Copyright>Copyright 2019</Copyright>
+		<RepositoryUrl>https://github.com/jamesmontemagno/CurrentActivityPlugin</RepositoryUrl>
+		<PackageReleaseNotes>See: https://github.com/jamesmontemagno/CurrentActivityPlugin </PackageReleaseNotes>
 
-  <PropertyGroup>
-    <TargetFramework>MonoAndroid44</TargetFramework>
-    <AssemblyName>Plugin.CurrentActivity</AssemblyName>
-    <RootNamespace>Plugin.CurrentActivity</RootNamespace>
-    <Product>$(AssemblyName) ($(TargetFramework))</Product>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <AssemblyFileVersion>1.0.0.0</AssemblyFileVersion>
-    <Version>1.0.0.0</Version>
-    <Authors>James Montemagno</Authors>
-    <PackageId>Plugin.CurrentActivity</PackageId>
-    <PackOnBuild>true</PackOnBuild>
-    <PackageLicenseUrl>https://github.com/jamesmontemagno/CurrentActivityPlugin/blob/master/LICENSE</PackageLicenseUrl>
-    <Owners>JamesMontemagno</Owners>
-    <PackageProjectUrl>https://github.com/jamesmontemagno/CurrentActivityPlugin</PackageProjectUrl>
-    <PackageIconUrl>http://refractored.com/images/plugin_current_activity.png</PackageIconUrl>
-    <Summary>Easily gain access to the active Activity.</Summary>
-    <PackageTags>xamarin, pcl, xam.pcl, plugin, plugin for xamarin, android, activity, current activity</PackageTags>
-    <Title>Current Activity Plugin for Xamarin.Android</Title>
-    <Description>
-      Provides a simple solution for getting access to the current Activity of the application when developing a Plugin for Xamarin.
-      This will lay down a base "application" class for developers in their Android application with boilerplate code to get them started.
-    </Description>
-    <Copyright>Copyright 2018</Copyright>
-    <RepositoryUrl>https://github.com/jamesmontemagno/CurrentActivityPlugin</RepositoryUrl>
-    <PackageReleaseNotes>See: https://github.com/jamesmontemagno/CurrentActivityPlugin </PackageReleaseNotes>
-
-    <NeutralLanguage>en</NeutralLanguage>
-    <LangVersion>default</LangVersion>
-    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
-    <DefineConstants>$(DefineConstants);</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)'=='Debug' ">
-    <DebugType>full</DebugType>
-    <DebugSymbols>true</DebugSymbols>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)'=='Release' ">
-    <DebugType>pdbonly</DebugType>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-  </PropertyGroup>
-  <ItemGroup>
-    <None Include="**\*.cs;**\*.xml;**\*.axml;**\*.png" Exclude="obj\**\*.*;bin\**\*.*;obj;bin;" />
-    <None Include="..\..\nuget\readme.txt" PackagePath="readme.txt" Pack="true" />
-    <PackageReference Include="MSBuild.Sdk.Extras" Version="1.4.0" PrivateAssets="All" />
-    <Compile Include="CurrentActivity\**\*.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
+		<NeutralLanguage>en</NeutralLanguage>
+		<EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+		<LangVersion>7.3</LangVersion>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)'=='Debug' ">
+		<DebugType>full</DebugType>
+		<DebugSymbols>true</DebugSymbols>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)'=='Release' ">
+		<DebugType>pdbonly</DebugType>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	</PropertyGroup>
+	<!--https://github.com/onovotny/MSBuildSdkExtras/issues/174-->
+	<Target Name="_RemoveNonExistingResgenFile" BeforeTargets="CoreCompile" Condition="'$(_SdkSetAndroidResgenFile)' == 'true' And '$(AndroidResgenFile)' != '' And !Exists('$(AndroidResgenFile)')">
+		<ItemGroup>
+			<Compile Remove="$(AndroidResgenFile)"/>
+		</ItemGroup>
+	</Target>
+	<ItemGroup>
+		<None Exclude="bin\**\*.*;obj;bin;" Include="**\*.cs;**\*.xml;**\*.axml;**\*.png" />
+		<None Include="..\..\nuget\readme.txt" PackagePath="readme.txt" Pack="true" />
+		<Compile Include="CurrentActivity\**\*.cs" />
+	</ItemGroup>
 </Project>
